NIFI-13167 Replaced Hamcrest Matchers with JUnit Matchers
- Removed Hamcrest from set of default dependencies